# complaince-system

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
api/: auth.py  complaint.py  routers.py  user.py
commands/: create_super_user.py
commnands/: create_super_user.py
managers/: auth.py  complaint.py  user.py
migrations/: env.py
migrations/versions/: e70af9c59b3b_initial.py  e9a2b3e2385c_add_transactions.py
models/: __init__.py  base.py  complaints.py  transactions.py  users.py
schemas/: base.py
schemas/request/: user.py
schemas/response/: complaint.py  user.py
scripts/: run-local.sh
services/: s3.py  ses.py  wise.py
utils/: helpers.py
