[tool.poetry]
name = "Complaint System Main Course"
version = "0.1.0"
description = ""
authors = ["Vladyslav Koliesov <kolesov0703@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
sqlalchemy = "1.4.41"
ipython = "^8.7.0"
databases = "^0.6.2"
alembic = "^1.8.1"
python-decouple = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
